[gd_scene load_steps=9 format=3 uid="uid://brj3gmp7ureo3"]

[ext_resource type="Script" path="res://Scripts/inv_slot.gd" id="1_qmg5l"]
[ext_resource type="Script" path="res://Scripts/stats.gd" id="2_2aslq"]
[ext_resource type="Texture2D" uid="uid://dru35iojyb7v2" path="res://Sprites/GUI/inv_slot.png" id="2_b2q4k"]
[ext_resource type="Texture2D" uid="uid://bqb8xdrt2p2o" path="res://Sprites/GUI/red_scaling.png" id="3_w1oys"]
[ext_resource type="Texture2D" uid="uid://ba4mdfwdcembs" path="res://Sprites/GUI/blue_scaling.png" id="4_kyvdt"]
[ext_resource type="Texture2D" uid="uid://nkuy4prb6r4s" path="res://Sprites/GUI/green_scaling.png" id="5_jiu7r"]
[ext_resource type="Texture2D" uid="uid://dkdx6faobxsjl" path="res://Sprites/GUI/item_description.png" id="7_1qfd8"]
[ext_resource type="Texture2D" uid="uid://c14xeatrp15s7" path="res://Sprites/GUI/item_borders/nine_patch_test.png" id="9_5sx0d"]

[node name="slot" type="PanelContainer"]
self_modulate = Color(1, 1, 1, 0)
offset_right = 60.0
offset_bottom = 60.0
script = ExtResource("1_qmg5l")

[node name="inventory_texture" type="Sprite2D" parent="."]
position = Vector2(-2, -2)
texture = ExtResource("2_b2q4k")
offset = Vector2(32, 32)

[node name="weapon_type_red" type="Sprite2D" parent="inventory_texture"]
visible = false
modulate = Color(0.439216, 0.439216, 0.439216, 1)
position = Vector2(32, 32)
texture = ExtResource("3_w1oys")

[node name="weapon_type_blue" type="Sprite2D" parent="inventory_texture"]
visible = false
modulate = Color(0.439216, 0.439216, 0.439216, 1)
position = Vector2(32, 32)
texture = ExtResource("4_kyvdt")

[node name="weapon_type_green" type="Sprite2D" parent="inventory_texture"]
visible = false
modulate = Color(0.439216, 0.439216, 0.439216, 1)
position = Vector2(32, 32)
texture = ExtResource("5_jiu7r")

[node name="item_border" type="Sprite2D" parent="inventory_texture"]
position = Vector2(32, 32)

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
stretch_mode = 5
script = ExtResource("2_2aslq")

[node name="ColorRect" type="Sprite2D" parent="TextureRect"]
visible = false
self_modulate = Color(0.443137, 0.443137, 0.443137, 1)
z_index = 2
position = Vector2(71, -353)
texture = ExtResource("7_1qfd8")
offset = Vector2(150, 175)

[node name="item_rarity" type="NinePatchRect" parent="TextureRect/ColorRect"]
offset_top = -4.0
offset_right = 301.0
offset_bottom = 354.0
texture = ExtResource("9_5sx0d")
draw_center = false
patch_margin_left = 7
patch_margin_top = 8
patch_margin_right = 6
patch_margin_bottom = 6
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Name_label" type="RichTextLabel" parent="TextureRect/ColorRect"]
modulate = Color(0.815686, 0.815686, 0.815686, 1)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_top = 5.0
offset_right = 77.0
offset_bottom = 31.0
grow_horizontal = 2
text = "item_name"

[node name="lvl_label" type="RichTextLabel" parent="TextureRect/ColorRect"]
modulate = Color(0.815686, 0.815686, 0.815686, 1)
offset_left = 12.0
offset_top = 41.0
offset_right = 130.0
offset_bottom = 67.0
text = "item_lvl
"

[node name="item_defense" type="RichTextLabel" parent="TextureRect/ColorRect"]
modulate = Color(0.815686, 0.815686, 0.815686, 1)
offset_left = 12.0
offset_top = 119.0
offset_right = 130.0
offset_bottom = 145.0
text = "item_defense"

[node name="dmg_label" type="RichTextLabel" parent="TextureRect/ColorRect"]
modulate = Color(0.815686, 0.815686, 0.815686, 1)
offset_left = 12.0
offset_top = 67.0
offset_right = 130.0
offset_bottom = 93.0
text = "item_dmg
"

[node name="crit_chance" type="RichTextLabel" parent="TextureRect/ColorRect"]
modulate = Color(0.815686, 0.815686, 0.815686, 1)
offset_left = 12.0
offset_top = 93.0
offset_right = 130.0
offset_bottom = 119.0
text = "crit_chance"

[node name="item_health" type="RichTextLabel" parent="TextureRect/ColorRect"]
modulate = Color(0.815686, 0.815686, 0.815686, 1)
offset_left = 12.0
offset_top = 145.0
offset_right = 130.0
offset_bottom = 171.0
text = "health_power"

[node name="description" type="RichTextLabel" parent="TextureRect/ColorRect"]
modulate = Color(0.815686, 0.815686, 0.815686, 1)
offset_left = 12.0
offset_top = 205.0
offset_right = 199.0
offset_bottom = 297.0
text = "description: me da um real, me da dois real, me da tres real"

[connection signal="mouse_entered" from="TextureRect" to="TextureRect" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="TextureRect" method="_on_mouse_exited"]
